--- a/package.json
+++ b/package.json
@@ -3,14 +3,21 @@
   "version": "0.1.0",
   "dependencies": {
     "babel-polyfill": "^6.23.0",
+    "bluebird": "^3.5.1",
     "express": "^4.15.3",
     "express-handlebars": "^3.0.0",
     "html-minifier": "^3.5.15",
+    "isomorphic-fetch": "^2.2.1",
     "path": "^0.12.7",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-router-dom": "^4.1.1"
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.1.1",
+    "redux": "^4.0.0",
+    "redux-immutable-state-invariant": "^2.1.0",
+    "redux-promise-middleware": "^5.1.1",
+    "redux-state": "^1.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
